<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/thiago_cortes" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/niver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/niver"
        android:inputType="date"
        android:padding="10dp" />

    <requestFocus />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/entrar" />

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/cadastrar" />

</LinearLayout>
